Bevel should not create vertex meshes when only two edges at a vertex are beveled. #44742

Closed
opened 2015-05-17 18:19:19 +02:00 by Howard Trickey · 5 comments
Member

A user request is to be more like a competing program on bevels at vertices where exactly two edges (among many) are beveled.
Here is a picture showing what is desired: blenderbevelVSmaya-01.jpg. The example blend file is here: beveltest-01.blend

The current Blender bevel code attempts to keep non-beveled edges going having the same direction as they had before the bevel, in the belief that those edges may be important to the silhouette of the model. Also, in the case where there is only one non-beveled edge on a given side of the bevel, then artists like an effect that looks like loop slide along that edge when you bevel. Following the first principle, if there are more than one non-beveled edge on a given side of a bevel, the current code makes a polygon at the bevel juncture. In the attached picture, the artist would prefer not doing that, even if it means changing the angles of some of the non-beveled edges.

I have a patch that implements the desired behavior but would like the patch reviewed, so am putting some context for the reason for this patch into this task. I'll update this task when I've uploaded the patch.

A user request is to be more like a competing program on bevels at vertices where exactly two edges (among many) are beveled. Here is a picture showing what is desired: ![blenderbevelVSmaya-01.jpg](https://archive.blender.org/developer/F175881/blenderbevelVSmaya-01.jpg). The example blend file is here: [beveltest-01.blend](https://archive.blender.org/developer/F175883/beveltest-01.blend) The current Blender bevel code attempts to keep non-beveled edges going having the same direction as they had before the bevel, in the belief that those edges may be important to the silhouette of the model. Also, in the case where there is only one non-beveled edge on a given side of the bevel, then artists like an effect that looks like loop slide along that edge when you bevel. Following the first principle, if there are more than one non-beveled edge on a given side of a bevel, the current code makes a polygon at the bevel juncture. In the attached picture, the artist would prefer not doing that, even if it means changing the angles of some of the non-beveled edges. I have a patch that implements the desired behavior but would like the patch reviewed, so am putting some context for the reason for this patch into this task. I'll update this task when I've uploaded the patch.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Howard Trickey self-assigned this 2015-05-17 18:19:19 +02:00
Author
Member

Added subscribers: @ideasman42, @Sergey

Added subscribers: @ideasman42, @Sergey
Author
Member

Here is a patch that adds the new functionality under control of a parameters variable called new_vmesh. I enabled that parameter by default but you can disable it (by code editing) if you want to see the old behavior.

newvmeshpatch.diff

(I made this patch on windows so apologize if CRLFs make it annoying to use. Not sure if that will be the case.)

If we like the effect of this patch, there's the question of which of these three things to do:

  1. make it a user-visible option (but there isn't a good name for this: something like "Avoid vertex polygons" is the best I can come up with)
  2. make it an option in the internal interface and code, and use do_versions to select between the new and old code depending on the blender version, so as not to break old models that have bevel modifiers and maybe liked the old effect. (If I do this, I might make the internal variable called something like "bevel_algorithm_version" so that future changes to the algorithm could use the same field for do_versions).
  3. just let old versions of bevel modifiers get the new behavior and hope no-one minds too much

Opinions on which of these three options to use?

By the way, there's another difference between what Blender does and what the competing software does at vertices where just one edge is beveled and there are multiple segments and there are more than 1 unbeveled edge into the vertex: they just pick one of those edges to slide along and then make a polygon to deal with the remainder. I haven't decided whether I want to do that too (the artist didn't complain about that behavior) but I suppose if I were going to do that it could be done all at once, rather than in two steps. I think I'd rather do it in two steps.

Here is a patch that adds the new functionality under control of a parameters variable called new_vmesh. I enabled that parameter by default but you can disable it (by code editing) if you want to see the old behavior. [newvmeshpatch.diff](https://archive.blender.org/developer/F175885/newvmeshpatch.diff) (I made this patch on windows so apologize if CRLFs make it annoying to use. Not sure if that will be the case.) If we like the effect of this patch, there's the question of which of these three things to do: 1) make it a user-visible option (but there isn't a good name for this: something like "Avoid vertex polygons" is the best I can come up with) 2) make it an option in the internal interface and code, and use do_versions to select between the new and old code depending on the blender version, so as not to break old models that have bevel modifiers and maybe liked the old effect. (If I do this, I might make the internal variable called something like "bevel_algorithm_version" so that future changes to the algorithm could use the same field for do_versions). 3) just let old versions of bevel modifiers get the new behavior and hope no-one minds too much Opinions on which of these three options to use? By the way, there's another difference between what Blender does and what the competing software does at vertices where just one edge is beveled and there are multiple segments and there are more than 1 unbeveled edge into the vertex: they just pick one of those edges to slide along and then make a polygon to deal with the remainder. I haven't decided whether I want to do that too (the artist didn't complain about that behavior) but I suppose if I were going to do that it could be done all at once, rather than in two steps. I think I'd rather do it in two steps.

This issue was referenced by fd1ea5e3db

This issue was referenced by fd1ea5e3db5a66848dc532423340dce2d08ab599
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44742
No description provided.